--- a/build.xml
+++ b/build.xml
@@ -781,7 +781,7 @@
     
     <!-- Include dependencies in single jar file -->
     <!-- this doesn't appear to work when j3d/jogl is included… -->
-    <target name="singlejar" depends="clean, auxdata.nodocs, ncidv.nolog, external.nolog, build"
+    <target name="singlejar" depends="clean, auxdata.nodocs, build, ncidv.nolog, external.nolog"
         description="Include dependencies in single jar file">
         
         <mkdir dir="${dist.dir}" />
@@ -820,7 +820,7 @@
     
     <!-- Create distribution product -->
     <target name="dist"
-        depends="auxdata.nodocs, ncidv.nolog, external.nolog, jar, startupmanager, javadoc.jar, userguide.jar"
+        depends="auxdata.nodocs, jar, ncidv.nolog, external.nolog, startupmanager, javadoc.jar, userguide.jar"
         description="Create distribution product" >
 <!--         <copy file="${base.dir}/edu/wisc/ssec/mcidasv/util/GetMem.class" tofile="${dist.dir}/GetMem.class" failonerror="false" />
         <copy file="${base.dir}/edu/wisc/ssec/mcidasv/util/GetVer.class" tofile="${dist.dir}/GetVer.class" failonerror="false" /> -->
@@ -830,7 +830,7 @@
     
     <!-- Create nightly webstart distribution product -->
     <target name="nightly"
-        depends="gitupdate, auxdata.nodocs, ncidv.nolog, external.nolog, jar.nightly, startupmanager, javadoc.jar, userguide.jar, source"
+        depends="gitupdate, auxdata.nodocs, jar.nightly, startupmanager, ncidv.nolog, external.nolog, javadoc.jar, userguide.jar, source"
         description="Create nightly webstart distribution product" />
         
     <!-- Build and run McIDAS-V application (small memory) -->
@@ -1163,26 +1163,26 @@
         <delete dir="${idvlib.dir}/tmp" failonerror="false" />
     </target>
 
-    <!-- Remove the org/slf4j/ directory from ncIdv.jar -->
-    <target name="ncidv.nolog" description="Remove the org/slf4j/ directory from ncIdv.jar">
-        <mkdir dir="${idvlib.dir}/tmp" />
-        <unzip src="${idvlib.dir}/ncIdv.jar" dest="${idvlib.dir}/tmp" />
+    <!-- Remove the org/slf4j directory from ncIdv.jar. -->
+    <target name="ncidv.nolog" depends="build" description="Remove the org/slf4j directory from ncIdv.jar">
+        <mkdir dir="${dist.dir}/tmp" />
+        <unzip src="${dist.dir}/ncIdv.jar" dest="${dist.dir}/tmp" />
         
-        <delete dir="${idvlib.dir}/tmp/org/slf4j" failonerror="false" />
-        <delete file="${idvlib.dir}/ncIdv.jar" failonerror="false" />
+        <delete dir="${dist.dir}/tmp/org/slf4j" failonerror="false" />
+        <delete file="${dist.dir}/ncIdv.jar" failonerror="false" />
         
-        <jar destfile="${idvlib.dir}/ncIdv.jar" basedir="${idvlib.dir}/tmp" index="true"/>
-        <delete dir="${idvlib.dir}/tmp" failonerror="false" />
+        <jar destfile="${dist.dir}/ncIdv.jar" basedir="${dist.dir}/tmp" index="true"/>
+        <delete dir="${dist.dir}/tmp" failonerror="false" />
     </target>
     
-    <!-- Remove the org/slf4j/ directory from external.jar -->
-    <target name="external.nolog" description="Remove the org/slf4j from external.jar">
-        <mkdir dir="${idvlib.dir}/tmp" />
-        <unzip src="${idvlib.dir}/external.jar" dest="${idvlib.dir}/tmp" />
-        <delete dir="${idvlib.dir}/tmp/org/slf4j" failonerror="false" />
-        <delete file="${idvlib.dir}/external.jar" failonerror="false" />
-        <jar destfile="${idvlib.dir}/external.jar" basedir="${idvlib.dir}/tmp" index="true"/>
-        <delete dir="${idvlib.dir}/tmp" failonerror="false" />
+    <!-- Remove the org/slf4j directory from external.jar. -->
+    <target name="external.nolog" depends="build" description="Remove the org/slf4j from external.jar">
+        <mkdir dir="${dist.dir}/tmp" />
+        <unzip src="${dist.dir}/external.jar" dest="${dist.dir}/tmp" />
+        <delete dir="${dist.dir}/tmp/org/slf4j" failonerror="false" />
+        <delete file="${dist.dir}/external.jar" failonerror="false" />
+        <jar destfile="${dist.dir}/external.jar" basedir="${dist.dir}/tmp" index="true"/>
+        <delete dir="${dist.dir}/tmp" failonerror="false" />
     </target>
     
     <!-- Create source jar file -->
