Bring back java.ext.dirs for the time being. [0]
This was breaking jar.runlarge with different versions of Java 1.8.

--- a/build.xml
+++ b/build.xml
@@ -887,7 +887,7 @@
       <sysproperty key="debug.adde.reqs" value="false" />
       -->
       <!--<sysproperty key="textureWidthMax" value="${visad.texturemax}" />-->
-      <!-- <sysproperty key="java.ext.dirs" value="${java.home}/lib/ext" /> -->
+      <sysproperty key="java.ext.dirs" value="${java.home}/lib/ext" />
       <sysproperty key="java.library.path" value="${java.home}/lib/ext" />
       <sysproperty key="loglevel" value="${run.log.level}" />
       <sysproperty key="mcv.userpath" value="${userpath.dir}" />
