Add ability to get all javadoc warnings. [0]
Default behavior is to just show the first 100, but you can do something
like the following to see all of the warnings:

ant -Djavadoc.warnings.maxnum=31337 javadoc

There are currently 636 warnings. :(

--- a/build.xml
+++ b/build.xml
@@ -161,6 +161,7 @@
 
     <!-- Javadoc options -->
     <property name="javadoc.level" value="private" />
+    <property name="javadoc.warnings.maxnum" value="100" />
 
     <!-- Use these properties to make changing the versions of related JARs
         (see SLF4J or Logback) a bit less tedious. -->
@@ -1119,6 +1120,8 @@
             <link href="http://www.ssec.wisc.edu/visad-docs/javadoc/" />
             <link href="http://www.unidata.ucar.edu/software/idv/docs/javadoc/" />
             <link href="http://www.unidata.ucar.edu/software/thredds/v4.6/netcdf-java/javadocAll/" />
+            <arg value="-Xmaxwarns" />
+            <arg value="${javadoc.warnings.maxnum}"/>
         </javadoc>
     </target>
 
