Add ability to report all javadoc errors. [0]
Similar to that "warnings" commit to build.xml. This adds a new property
"javadoc.errors.maxnum" (default value is 100) that can be overridden
when launching ant:

ant -Djavadoc.errors.maxnum=31337 -Djavadoc.warnings.maxnum=9001 javadoc

That *should* print out all the errors and warnings from javadoc. If it
doesn't, there are more than 31337 errors and/or more than 9001 warnings
and frankly heads should be rolling at that point.

--- a/build.xml
+++ b/build.xml
@@ -161,6 +161,21 @@
 
     <!-- Javadoc options -->
     <property name="javadoc.level" value="private" />
+    
+    <!-- Maximum number of errors javadoc should report.
+         
+         This value can be overridden by launching Ant like so:
+         $ ant -Djavadoc.errors.maxnum=31337 javadoc
+         
+         Higher values means javadoc will take longer to finish. -->
+    <property name="javadoc.errors.maxnum" value="100" />
+    
+    <!-- Maximum number of errors javadoc should report.
+         
+         This value can be overridden by launching Ant like so:
+         $ ant -Djavadoc.warnings.maxnum=31337 javadoc
+         
+         Higher values means javadoc will take longer to finish. -->
     <property name="javadoc.warnings.maxnum" value="100" />
 
     <!-- Use these properties to make changing the versions of related JARs
@@ -1120,6 +1135,8 @@
             <link href="http://www.ssec.wisc.edu/visad-docs/javadoc/" />
             <link href="http://www.unidata.ucar.edu/software/idv/docs/javadoc/" />
             <link href="http://www.unidata.ucar.edu/software/thredds/v4.6/netcdf-java/javadocAll/" />
+            <arg value="-Xmaxerrs" />
+            <arg value="${javadoc.errors.maxnum}"/>
             <arg value="-Xmaxwarns" />
             <arg value="${javadoc.warnings.maxnum}"/>
         </javadoc>
