--- a/build.xml
+++ b/build.xml
@@ -1330,7 +1330,7 @@
             <arg value="echo ${runtime_18} | perl -pe 's/^.*\/([\-\.\w]+\.jdk)\/.*$/$1/'" />
         </exec>
 
-        <bundleapp classpathref="app.classpath"
+        <bundleapp classpathref="macosx.app.classpath"
                    outputdirectory="${dist.dir}"
                    name="${bundle.name}"
                    displayname="McIDAS-V"
