--- a/build.xml
+++ b/build.xml
@@ -1252,6 +1252,13 @@
             <arg value="mcidasv.install4j" />
         </exec>
     </target>
+    
+    <target name="exe_installers" description="TEMPORARY FOR APPSIGN_WINDOWS BRANCH">
+        <exec dir="${release.dir}" executable="${install4jc.bin}" failifexecutionfails="true">
+            <arg value="--build-ids=8509,8430" />
+            <arg value="mcidasv.install4j" />
+        </exec>
+    </target>
 
     <!-- Zip up McIDAS-V JARs. mcidasv-tiny.zip contains only local-idv.jar  -->
     <!-- and mcidasv.jar. mcidasv-alljars.zip contains all McIDAS-V JARs.    -->
