--- a/build.xml
+++ b/build.xml
@@ -1256,6 +1256,7 @@
     <target name="exe_installers" description="TEMPORARY FOR APPSIGN_WINDOWS BRANCH">
         <exec dir="${release.dir}" executable="${install4jc.bin}" failifexecutionfails="true">
             <arg value="--build-ids=8509,8430" />
+            <arg value="--destination=${dist.dir}" />
             <arg value="mcidasv.install4j" />
         </exec>
     </target>
